# LiteSpeed-IDE

./: Cargo.toml  README.md
docs/: roadmap.md
docs/plans/: 2026-02-16-litespeed-ide-design.md
examples/: demo.rs
src/: main.rs
src/core/: fs.rs  git.rs  lsp.rs  mod.rs  plugin.rs  search.rs
src/plugins/: go.rs  mod.rs  python.rs  rust.rs
